fix overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,5 +16,5 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    overflow: auto;
+    overflow-y: auto;
 }
